# Polymarket

./: .gitignore  LICENSE  README.md  collect_data.py  display_dashboard.py  get_market_data.py  pyproject.toml  requirements.txt  run_dashboard.sh  setup.sh
services/: exceptions.py  market_book.py  market_monitor.py  order_book.py
utils/: constants.py  gamma_utils.py  keystroke_utils.py  poll_utils.py  utils.py  websocket_utils.py
utils/models/: event_metadata.py  updates.py
